# linkvault

./: LICENSE  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
components/: AddBookmarkDialog.tsx  BookmarkCard.tsx  BookmarkDetail.tsx  ConfirmDialog.tsx  DebugOverlay.tsx  Header.tsx  MigrationDialog.tsx  PairingExportDialog.tsx  PairingImportDialog.tsx  StorageBackendForm.tsx  StorageSettings.tsx
docs/: android-build.en.md  android-build.md  architecture.md  storage-r2.en.md  storage-r2.md  storage-s3.en.md  storage-s3.md
lib/: debug-log.ts  markdown.ts  platform.ts  processor.ts  store.ts  tauri-bridge.ts  types.ts  utils.ts
lib/ai/: claude.ts  gemini.ts  index.ts  openai.ts  openrouter.ts  prompt.ts
lib/parsers/: article.ts  youtube.ts
scripts/: android-mainactivity.kt  android-patch.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: error.rs  lib.rs  secret_store.rs  state.rs
src-tauri/src/commands/: config.rs  debug_cmd.rs  file_system.rs  index.rs  migrate.rs  mod.rs  pairing.rs  share.rs  storage_cmd.rs
src-tauri/src/storage/: local.rs  mod.rs  s3.rs  webdav.rs
