[package]
name = "linkvault"
version = "0.1.0"
description = "LinkVault — personal AI-powered bookmark manager"
authors = ["LinkVault"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
anyhow = "1"
thiserror = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
log = "0.4"
dirs = "5"
async-trait = "0.1"

# S3-compatible (Cloudflare R2, AWS S3, MinIO)
aws-config = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "rt-tokio", "behavior-version-latest"] }
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
aws-smithy-async = { version = "1", features = ["rt-tokio"] }

# WebDAV
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
quick-xml = { version = "0.36", features = ["serialize"] }
urlencoding = "2"
percent-encoding = "2"
