[package]
name = "linkvault"
version = "0.1.0"
description = "LinkVault — personal AI-powered bookmark manager"
authors = ["LinkVault"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
anyhow = "1"
thiserror = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
log = "0.4"
dirs = "5"
async-trait = "0.1"

# S3-compatible storage (Cloudflare R2, AWS S3, MinIO) — talks directly via
# reqwest, signing requests with aws-sigv4. Avoiding the full aws-sdk-s3
# stack lets us control TLS (webpki-roots) and works the same on Android.
aws-sigv4 = "1"
aws-credential-types = "1"

# HTTPS for both WebDAV and S3-family backends.
# rustls-tls-webpki-roots = bundled Mozilla CA store, works everywhere
# (including Android, where the OS cert store is otherwise inaccessible).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }
quick-xml = { version = "0.36", features = ["serialize"] }
urlencoding = "2"
percent-encoding = "2"
sha2 = "0.10"
hex = "0.4"

# Mobile-only plugins (loaded conditionally in lib.rs)
[target."cfg(any(target_os = \"android\", target_os = \"ios\"))".dependencies]
tauri-plugin-barcode-scanner = "2"

# Strip debuginfo from the dev profile so the Android debug APK doesn't pack
# hundreds of MB of DWARF symbols. The dev experience on desktop is unaffected
# (debugger still works, just no source-level inspection of release-mode
# crates) and the resulting APK shrinks by ~50%.
[profile.dev]
strip = "debuginfo"
